# mendax

./: .gitignore  Cargo.toml  README.md  lie.rhai  snapcraft.yaml
snap/: snapcraft.yaml
src/: args.rs  config.rs  dry_run.rs  error.rs  fib.rs  init.rs  lie.rs  main.rs  spoof.rs  tale.rs  tell.rs
