[package]
name = "mendax"
authors = [ "kcza" ]
description = "A CLI spoofer"
license =  "GPL-3.0-or-later"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive", "env", "wrap_help"] }
ncurses = "5.101.0"
rand = "0.8.5"
rhai = "1.12.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_yaml = "0.9.16"
strum = "0.24.1"
thiserror = "1.0.38"
