[package]
name = "mendax"
authors = [ "kcza" ]
description = "A CLI spoofer"
license =  "GPL-3.0-or-later"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive", "env", "wrap_help"] }
lazy_static = "1.4.0"
ncurses = "5.101.0"
phf = { version = "0.11.1", features = ["macros"] }
rand = "0.8.5"
rhai = { version = "1.12.0", features = ["no_module"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_yaml = "0.9.16"
thiserror = "1.0.38"
