[package]
name = "mendax"
authors = [ "kcza" ]
description = "A CLI spoofer"
license =  "GPL-3.0-or-later"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive", "env", "wrap_help"] }
crossterm = "0.26.1"
lazy_static = "1.4.0"
ncurses = "5.101.0"
phf = { version = "0.11.1", features = ["macros"] }
rand = "0.8.5"
rhai = { version = "1.12.0", features = ["no_module"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_yaml = "0.9.16"
subprocess = "0.2.9"
thiserror = "1.0.38"

[dev-dependencies]
regex = "1.7.3"
tempdir = "0.3.7"
tempfile = "3.4.0"
